src/test/ui/issues/issue-33140.stderr
error: conflicting implementations of trait `Trait` for type `(dyn std::marker::Send + std::marker::Sync + 'static)`: (E0119)
  --> $DIR/issue-33140.rs:21:1
   |
LL | impl Trait for dyn Send + Sync {
   | ------------------------------ first implementation here
...
LL | impl Trait for dyn Sync + Send {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn std::marker::Send + std::marker::Sync + 'static)`
   |
note: lint level defined here
  --> $DIR/issue-33140.rs:11:9
   |
LL | #![deny(order_dependent_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56484 <https://github.com/rust-lang/rust/issues/56484>

error: conflicting implementations of trait `Trait2` for type `(dyn std::marker::Send + std::marker::Sync + 'static)`: (E0119)
  --> $DIR/issue-33140.rs:35:1
   |
LL | impl Trait2 for dyn Send + Sync {
   | ------------------------------- first implementation here
...
LL | impl Trait2 for dyn Sync + Send + Sync {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn std::marker::Send + std::marker::Sync + 'static)`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56484 <https://github.com/rust-lang/rust/issues/56484>

error: duplicate definitions with name `abc` (E0592)
  --> $DIR/issue-33140.rs:43:5
   |
LL | /     fn abc() -> bool { //~ ERROR duplicate definitions with name `abc`
LL | |                        //~| hard error
LL | |         false
LL | |     }
   | |_____^ duplicate definitions for `abc`
...
LL | /     fn abc() -> bool {
LL | |         true
LL | |     }
   | |_____- other definition for `abc`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56484 <https://github.com/rust-lang/rust/issues/56484>

error: aborting due to 3 previous errors

